# proseproof

./: .env.example  .gitignore  README.md  launch-all.sh  stop-all.sh
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  document.py
backend/app/routes/: __init__.py  analysis.py  documents.py  health.py  stats.py
backend/app/services/: ai_service.py
backend/config/: app.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/common/: ConfirmDialog.tsx  FAB.tsx  ScoreDisplay.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/pages/: MainPage.tsx  StartupPage.tsx  StatsPage.tsx
frontend/src/hooks/: useAnalysis.ts  useAutoSave.ts  useDocuments.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
